src/test/deca/syntax/invalid/not_provided/include_cycle.deca
// Description:
//    Include un fichier A.
//    Ce fichier A include un fichier B.
//    Le fichier B include un fichier A.
//
//    [Lexicographie], Inclusion de fichier, p55
//
// Resultats:
//    Erreur d'inclusion circulaire.
//
// Historique:
//    cree le 05/01/2022

#include "include_cycle_a.decah"